# projectOS

./: .gitignore  .gitmodules  RUN_GUIDE.md  readme.md
source/firewall/: CMakeLists.txt  README.md
source/firewall/configs/: ioc_dns.json
source/firewall/src/kernel/: common_kern.h  firewall.bpf.c
source/firewall/src/user/: common_user.h  connection.cpp  main.cpp  utils.cpp  utils.h
source/firewall/tools/cmake/: FindBpfObject.cmake
source/firewall_control/: CMakeLists.txt  README.md  firewallctl.cpp
source/firewall_web/: app.py
source/firewall_web/templates/: index.html
